# vehicle-safety-agent

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  POSTMORTEM.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  contract-drift.yml
backend/app/: __init__.py
backend/app/agent/: __init__.py  loop.py  prompts.py
backend/app/api/: __init__.py  app.py  routes.py
backend/app/core/: __init__.py  config.py  cost.py  logging.py  preflight.py
backend/app/tools/: __init__.py  eu_safety_gate.py  nhtsa.py  registry.py  schemas.py
backend/scripts/: smoke_get_recalls.py
backend/tests/: test_agent_cost_cap.py  test_api_healthz.py  test_registry.py  test_schemas.py
backend/tests/live/: test_live_eu_safety_gate.py  test_live_nhtsa.py
backend/tests/unit/: test_agent_citations.py  test_agent_loop.py  test_api_healthz.py  test_degradation_relay.py  test_eu_safety_gate.py  test_eval_harness.py  test_grounding_regression.py  test_registry.py  test_schemas.py
backend/tests/unit/fixtures/: README.md  complaints_civic_2020.json  recalls_civic_2020.json  vpic_decode_noisy.json
docs/decisions/: 001-evals-before-agent.md  002-eu-data-sources.md
evals/: golden_set.yaml  run_evals.py
evals/results/: 2026-07-17-baseline-stub.md  2026-07-21-baseline.md  2026-07-21-post-fixes-1.md  2026-07-22-eu-slice-1.md
frontend/: NOTE.md
